-- Migration: align database with db/schema.dbml
-- Integer IDs, audit timestamps, optional datasheets.model_card_id, no deployments.
-- WARNING: Drops and recreates tables. Run only on a DB you can reset or backup first.
--
-- Usage: psql -d your_database -f db/migrate_to_integer_ids.sql
-- Then:  DATABASE_URL="postgresql://…" python3 db/seed_production_like.py

BEGIN;

DROP TABLE IF EXISTS experiment_images CASCADE;
DROP TABLE IF EXISTS experiments CASCADE;
DROP TABLE IF EXISTS raw_images CASCADE;
DROP TABLE IF EXISTS datasheets CASCADE;
DROP TABLE IF EXISTS models CASCADE;
DROP TABLE IF EXISTS model_cards CASCADE;
DROP TABLE IF EXISTS dataset_schemas CASCADE;
DROP TABLE IF EXISTS edge_devices CASCADE;
DROP TABLE IF EXISTS users CASCADE;
DROP TABLE IF EXISTS deployments CASCADE;
DROP TYPE IF EXISTS approval_status CASCADE;

CREATE TYPE approval_status AS ENUM ('pending', 'approved', 'rejected');

CREATE TABLE users (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  created_at timestamptz NOT NULL,
  updated_at timestamptz NOT NULL
);

CREATE TABLE edge_devices (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  created_at timestamptz NOT NULL,
  updated_at timestamptz NOT NULL
);

CREATE TABLE dataset_schemas (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  blob jsonb NOT NULL,
  created_at timestamptz NOT NULL,
  updated_at timestamptz NOT NULL
);

CREATE TABLE model_cards (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name text NOT NULL,
  version text,
  is_private boolean NOT NULL DEFAULT false,
  status approval_status NOT NULL DEFAULT 'pending',
  short_description text,
  full_description text,
  keywords text,
  author text,
  citation text,
  input_data text,
  input_type text,
  output_data text,
  foundational_model text,
  category text,
  documentation text,
  created_at timestamptz NOT NULL,
  updated_at timestamptz NOT NULL
);

CREATE TABLE datasheets (
  identifier bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  creator text,
  title text NOT NULL,
  publisher text,
  publication_year integer,
  resource_type text,
  size text,
  format text,
  version text,
  rights text,
  description text,
  geo_location text,
  category text,
  is_private boolean NOT NULL DEFAULT false,
  status approval_status NOT NULL DEFAULT 'pending',
  created_at timestamptz NOT NULL,
  updated_at timestamptz NOT NULL,
  alternate_identifier text,
  related_identifier text,
  model_card_id bigint REFERENCES model_cards(id),
  dataset_schema_id bigint REFERENCES dataset_schemas(id)
);
CREATE INDEX ON datasheets (model_card_id);
CREATE INDEX ON datasheets (dataset_schema_id);
CREATE INDEX ON datasheets (status);

CREATE TABLE models (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name text NOT NULL,
  version text,
  description text,
  owner text,
  location text,
  license text,
  framework text,
  model_type text,
  test_accuracy numeric(6,5),
  model_metrics jsonb,
  inference_labels jsonb,
  model_structure jsonb,
  created_at timestamptz NOT NULL,
  updated_at timestamptz NOT NULL,
  model_card_id bigint NOT NULL UNIQUE REFERENCES model_cards(id)
);
CREATE INDEX ON models (model_card_id);

CREATE TABLE experiments (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  start_at timestamptz NOT NULL,
  submitted_at timestamptz,
  executed_at timestamptz,
  model_used_at timestamptz,
  total_images integer,
  total_predictions integer,
  total_ground_truth_objects integer,
  true_positives integer,
  false_positives integer,
  false_negatives integer,
  precision numeric(6,5),
  recall numeric(6,5),
  f1_score numeric(6,5),
  mean_iou numeric(6,5),
  map_50 numeric(6,5),
  map_50_95 numeric(6,5),
  created_at timestamptz NOT NULL,
  updated_at timestamptz NOT NULL,
  user_id bigint NOT NULL REFERENCES users(id),
  edge_device_id bigint NOT NULL REFERENCES edge_devices(id),
  model_id bigint NOT NULL REFERENCES models(id)
);
CREATE INDEX ON experiments (user_id);
CREATE INDEX ON experiments (edge_device_id);
CREATE INDEX ON experiments (model_id);
CREATE INDEX ON experiments (start_at);

CREATE TABLE raw_images (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  image_name text NOT NULL,
  ground_truth jsonb,
  created_at timestamptz NOT NULL,
  updated_at timestamptz NOT NULL
);

CREATE TABLE experiment_images (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  experiment_id bigint NOT NULL REFERENCES experiments(id),
  raw_image_id bigint NOT NULL REFERENCES raw_images(id),
  image_count integer,
  image_received_at timestamptz,
  image_scored_at timestamptz,
  image_store_deleted_at timestamptz,
  image_decision text,
  top_label text,
  top_probability numeric(8,7),
  ingested_at timestamptz NOT NULL,
  scores jsonb,
  UNIQUE (experiment_id, raw_image_id)
);
CREATE INDEX ON experiment_images (experiment_id);
CREATE INDEX ON experiment_images (raw_image_id);
CREATE INDEX ON experiment_images (image_received_at);
CREATE INDEX ON experiment_images (ingested_at);

COMMIT;
